# bfg9000

./: .appveyor.yml  .coveragerc  .gitignore  .travis.yml  404.html  CHANGES.md  LICENSE  README.md  appveyor.yml  bfg9000  builtin_rules.py  builtins.py  cc_toolchain.py  codecov.yml  index.html  languages.py  linux_platform.py  make_backend.py  mkdocs.py  mkdocs.yml  node.py  platform.py  rule.py  setup.cfg  setup.py  sitemap.xml  stdeb.cfg  stdeb.patch  utils.py  versions.json
0.3/: 404.html  index.html  sitemap.xml
0.4/: index.html  sitemap.xml
0.5/: index.html  sitemap.xml
0.6/: 404.html  index.html  sitemap.xml
0.7/: 404.html  index.html  sitemap.xml
0.8/: 404.html  index.html  sitemap.xml
backends/: make.py  ninja.py
bfg9000/: app_version.py  build.py  build_inputs.py  builtins.py  depfixer.py  driver.py  e1m1.py  environment.py  exceptions.py  file_types.py  find.py  frameworks.py  glob.py  iterutils.py  jvmoutput.py  keywords.py  languages.py  log.py  makedirs.py  objutils.py  options.py  packages.py  path.py  pathutils.py  platform_name.py  platforms.py  printf.py  rccdep.py  rules.py  safe_str.py  scanner.py  setenv.py  shell.py  utils.py  version.py  versioning.py  versionutils.py
building/: index.html
complex/: build.bfg
css/: extra.css
dev/: 404.html  index.html  sitemap.xml
developer/: index.html
doc/: building.md  developer.md  environment-vars.md  getting-started.md  goals.md  index.md  install.md  license.md  reference.md  windows.md  writing.md
environment-vars/: index.html
getting-started/: index.html
install/: index.html
(+676 files in other folders)
