[metadata]
license_file = LICENSE

[flake8]
extend-exclude = build,dist,deb_dist
extend-ignore = E201,E202,E203,F403,F405
per-file-ignores =
  bfg9000/backends/msbuild/syntax.py:E124,E128

[coverage:run]
source = bfg9000
parallel = True
branch = True

[coverage:paths]
source =
  bfg9000/
  /usr/local/lib/*/site-packages/bfg9000/

[coverage:report]
exclude_lines =
  pragma: no cover
  raise NotImplementedError
  return NotImplemented
  def __repr__
